# sweethome3d-windows-builder

./: .pre-commit-config.yaml  README.md  build.py  catalog.jinja  config.py  demo_library.json  materials.py  pyproject.toml  utils.py
materials/: materials.mtl
obj_types/: library.py  part.py  sash.py  thickness.py  window.py
objects/: base_object.py  box.py  cylinder.py  frame.py  glass.py  hinge.py  pane.py  vertex_normals.py
objects/panes/: __init__.py  double_opening_pane.py  fixed_pane.py  frame_with_glass.py  pane.py  pane_hinges.py  single_opening_pane.py
