[tool.poetry]
name = "sweethome3d-windows-builder"
version = "0.1.0"
description = ""
authors = ["Fabien MICHEL <fabien@revo.lu>"]
# readme = "README.md"
packages = [{ include = "sweethome3d_windows_builder" }, { include = "f3d" }]


[tool.poetry.dependencies]
python = "^3.11,<3.12"
pyqt6 = "^6.5.1"
pyside6 = "^6.5.1.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.267"
isort = "^5.12.0"
invoke = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
